re PR target/21099 (ICE on mmx intrinsics)

PR target/21099
        * config/i386/i386.c (ix86_split_to_parts): Use proper mode when
        simplifying CONST_VECTOR.

From-SVN: r98623